nginx_yaml_files/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapnextgen-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
